--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,15 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-
+/
+/lib/firebase_options.dart
+/firebase.json
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
-.firebase.json
+
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
