--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,16 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-/
+
+# Firebase
 /lib/firebase_options.dart
 /firebase.json
+
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
-
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
@@ -42,7 +43,7 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio build artifacts
 /android/app/debug
 /android/app/profile
 /android/app/release
